# cross-scout

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.app  Dockerfile.explorer  Dockerfile.indexer  Makefile  README.md  docker-compose.yml  doctor.config.json  package.json  tsconfig.base.json  turbo.json
apps/api/: package.json  tsconfig.json
apps/api/src/: convert.ts  db.ts  hex.ts  index.ts  mappers.ts  params.ts  pricing.ts  routes.ts  static.ts  stream.ts  stream_channel.ts
apps/crossscout/: index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/crossscout/src/: App.tsx  main.tsx  theme.css  vite-env.d.ts
apps/crossscout/src/components/: AppHeader.tsx  AppRoutes.tsx  AreaChart.tsx  CursorPagination.tsx  ErrorBoundary.tsx  FlowChart.tsx  StageBadge.tsx  StatGrid.tsx  StatsBar.tsx  Timeline.tsx  TokenAsset.tsx  TopAssets.tsx  XtDrawer.tsx  XtTable.tsx  primitives.tsx  rows.tsx
apps/crossscout/src/hooks/: useChainData.ts  useChainViews.ts  useExplorerData.ts  usePaginatedXts.ts  useRoute.ts  useSearchFilters.ts  useSuperblocks.ts
apps/crossscout/src/lib/: api.ts  chains.ts  csv.ts  format.ts  mailbox.ts  nav.ts  status.ts  tokens.ts
apps/crossscout/src/pages/: BridgePage.tsx  InstancesPage.tsx  MailboxPage.tsx  NetworkPage.tsx  OverviewPage.tsx  RollupDetailPage.tsx  RollupsPage.tsx  SuperblockDetailPage.tsx  SuperblocksPage.tsx  TransactionsPage.tsx  TxDetailPage.tsx
apps/crossscout/src/ui/: Button.tsx  CopyButton.tsx  cn.ts  icons.tsx
crates/correlate/: Cargo.toml
crates/correlate/src/: engine.rs  error.rs  lib.rs  lifecycle.rs  mailbox.rs
crates/indexer-core/: Cargo.toml
crates/indexer-core/src/: config.rs  error.rs  lib.rs  mock.rs  publisher_poll.rs  registry.rs  runtime.rs  token_resolver.rs
crates/ingest-bridge/: Cargo.toml
crates/ingest-bridge/src/: lib.rs
crates/ingest-el/: Cargo.toml
crates/ingest-el/src/: evm.rs  lib.rs
crates/ingest-flashblocks/: Cargo.toml
crates/ingest-flashblocks/src/: lib.rs
crates/ingest-sbcp/: Cargo.toml
crates/ingest-sbcp/src/: lib.rs
crates/ingest-settlement/: Cargo.toml
crates/ingest-settlement/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: convert.rs  error.rs  lib.rs  notify.rs  redis.rs  repo.rs  rows.rs  write.rs
crates/types/: Cargo.toml
crates/types/src/: dto.rs  event.rs  lib.rs  source.rs
migrations/: 0001_init.sql  0002_canonical_xt_status.sql  0002_receipt_fees.sql  0003_query_indexes.sql
