[package]
name = "cross-scout-indexer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cross_scout_indexer_core"
path = "src/lib.rs"

[[bin]]
name = "cross-scout-indexer"
path = "src/bin/indexer.rs"

[dependencies]
cross-scout-types.workspace = true
cross-scout-store.workspace = true
cross-scout-correlate.workspace = true
cross-scout-ingest-el.workspace = true
cross-scout-ingest-flashblocks.workspace = true
cross-scout-ingest-sbcp.workspace = true
cross-scout-ingest-settlement.workspace = true
alloy.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
anyhow.workspace = true

[lints]
workspace = true
