[package]
name = "cross-scout-ingest-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cross_scout_ingest_bridge"
path = "src/lib.rs"

[dependencies]
cross-scout-types.workspace = true
cross-scout-ingest-el.workspace = true
alloy.workspace = true
async-trait.workspace = true
tracing.workspace = true

[lints]
workspace = true
