[package]
name = "cross-scout-ingest-el"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cross_scout_ingest_el"
path = "src/lib.rs"

[dependencies]
cross-scout-types.workspace = true
alloy.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true

[lints]
workspace = true
