[package]
name = "cross-scout-ingest-sbcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cross_scout_ingest_sbcp"
path = "src/lib.rs"

[dependencies]
cross-scout-types.workspace = true
cross-scout-ingest-el.workspace = true
alloy.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true

[lints]
workspace = true
