[package]
name = "cross-scout-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cross_scout_store"
path = "src/lib.rs"

[dependencies]
cross-scout-types.workspace = true
sqlx.workspace = true
bigdecimal.workspace = true
alloy.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
